# glowfic-tts

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
docs/: android-sync.md  casting.md
src/glowfic_tts/: __init__.py  api.py  characters.py  cli.py  genders.py  html_text.py  models.py  pipeline.py  stages.py  storage.py  tts.py  voices.py
tests/: conftest.py  test_api_auth.py  test_assemble.py  test_characters.py  test_extract.py  test_html_text.py  test_models.py  test_pipeline.py  test_voices_bind.py
tests/fixtures/: post_7508.json  replies_7508_p1.json  replies_7508_p1_headers.json
