[project]
name = "glowfic-tts"
version = "0.1.0"
description = "Turn a glowfic post into a multi-voice audiobook — each character gets its own voice."
readme = "README.md"
authors = [
    { name = "Yonatan Cale" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "tomli-w>=1.2.0",
]

[project.scripts]
glowfic-tts = "glowfic_tts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
